# merge_bags

./: CMakeLists.txt  README.md  package.xml
src/: multi_bag_process.cpp  simple_bag_reader.cpp  simple_bag_recorder.cpp
