<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>merge_bags</name>
  <version>0.0.0</version>
  <description>ROS bag test package</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>  <!-- 使用ament_auto需要这个 -->

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>turtlesim</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_transport</depend>
  <depend>nmea_msgs</depend>
  <depend>sbg_driver</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
